<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2014 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>

    <string name="app_name">Wikimedia Point Cloud</string>
    <string name="menu_name">WikiPointCloud</string>
    <string name="vertex_count">Number of points:</string>
    <string name="serviceversion">Tango service version:</string>
    <string name="appversion">"App version: "</string>
    <string name="tangoevent">"System event: "</string>
    <string name="start2device">Target->Device, Base->Start: </string>
    <string name="posecount">", count: "</string>
    <string name="status">"status: "</string>
    <string name="deltatime">", delta time (ms): "</string>
    <string name="pose">", position (m): "</string>
    <string name="quat">", quat: "</string>
    <string name="first_person">First-person</string>
    <string name="third_person">Third-person</string>
    <string name="top_down">Top</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="realtime">Realtime</string>
    <string name="autoreseton">Auto Reset On</string>
    <string name="autoresetoff">Auto Reset Off</string>
    <string name="averageZ">"Average depth (m): "</string>
    <string name="pointCount">"Point count: "</string>
    <string name="frameDelta">"Frame delta time (ms): "</string>
    <string name="TangoError">"Tango Exception"</string>
    <string name="TangoOutOfDateException">"Tango Service outdated!"</string>
    <string name="motiontrackingpermission">"Motion Tracking permission needed!"</string>
    <string name="NA">"N/A"</string>
    <string name="pose_initializing">"initializing"</string>
    <string name="pose_valid">"valid"</string>
    <string name="pose_invalid">"invalid"</string>
    <string name="pose_unknown">"unknown"</string>
    <string name="latest_adf_is">", Latest ADF is: "</string>
    <string name="save_data">"Save data"</string>
    <string name="saving_data">"Saving data..."</string>
    <string name="save_success">"Saved successfully: "</string>

</resources>